# old-mcptool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dev-requirements.txt  main.py  msi.py  package.json  pyproject.toml  settings.json
docs/: commands.md  fakeproxy.md  instalation.MD  instalation.md
executables/: exe.py  updater.py
files/languages/: en.json  es.json
files/scripts/: brute_auth.mjs  connect.mjs  sendcmd.mjs  utilities.mjs
languages/: en.json  ru.json
mcptool/: __init__.py  __main__.py
mcptool/commands/: bruteauth.py  brutercon.py  checker.py  clear.py  clearservers.py  connect.py  debug.py  discord.py  dnslookup.py  fakeproxy.py  help.py  iphistory.py  ipinfo.py  kick.py  kickall.py  language.py  listening.py  password.py  proxy.py  rcon.py  resolver.py  scan.py  seeker.py  sendcmd.py  server.py  settings.py  subdomains.py  uuid.py  websearch.py
mcptool/constants/: __init__.py  banners.py  update_available.py
mcptool/hackertarget/: get_subdomains.py
mcptool/inputcustom/: __init__.py
mcptool/ipv4/: get_cloudflare_ip.py  get_ip_info.py
mcptool/nbt/: servers_dat.py
mcptool/nordify/: finder.py
mcptool/notifications/: send.py
mcptool/path/: mcptool_path.py
mcptool/scanner/: external_scanner.py  py_scanner.py
mcptool/scrappers/: iphistory.py  minecraftservers.py
mcptool/update/: updater.py
mcptool/utilities/: constants_utilities.py
mcptool/virustotal/: get_subdomains.py
settings/: nordify.json  proxy.json  scanner.json  sendcmd_settings.json  settings.json  velocity.toml
src/: updater_exe.py
(+58 files in other folders)
